--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,21 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.12</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.12.38</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>4.1.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
