--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,19 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:8889/beta
+    url: jdbc:mysql://localhost:3306/beta
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
   thymeleaf:
     cache: false
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 500MB
 server:
   port: 8081
+  servlet:
+    context-path: /api
